[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/customization/CreateObjectPanel.gd" type="Script" id=1]
[ext_resource path="res://src/customization/listview/ListViewPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/customization/GenerateFunctionPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/customization/chinese_label_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://src/customization/EditMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/customization/ObjectPanal.gd" type="Script" id=12]

[node name="CreateObjectPanel" type="Panel"]
anchor_right = 4.0
anchor_bottom = 4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectPanal" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 396.0
margin_bottom = 720.0
size_flags_horizontal = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameList" type="VBoxContainer" parent="HBoxContainer/ObjectPanal"]
margin_right = 396.0
margin_bottom = 52.0

[node name="StuffName" parent="HBoxContainer/ObjectPanal/NameList" instance=ExtResource( 11 )]
anchor_right = 0.0
margin_right = 396.0
margin_bottom = 24.0
display_label = "物品名称"

[node name="EditMenu2" parent="HBoxContainer/ObjectPanal/NameList" instance=ExtResource( 11 )]
anchor_right = 0.0
margin_top = 28.0
margin_right = 396.0
margin_bottom = 52.0
display_label = "物品类型"

[node name="PhysicsList" parent="HBoxContainer/ObjectPanal" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 396.0
margin_bottom = 369.0
title_name = "物理属性"

[node name="ObjectList" parent="HBoxContainer/ObjectPanal" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 373.0
margin_right = 396.0
margin_bottom = 686.0
title_name = "物品列表"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ObjectPanal"]
margin_top = 690.0
margin_right = 396.0
margin_bottom = 720.0

[node name="DeleteButton" type="Button" parent="HBoxContainer/ObjectPanal/HBoxContainer"]
margin_right = 196.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
disabled = true
text = "删除物品"

[node name="ModifyButton" type="Button" parent="HBoxContainer/ObjectPanal/HBoxContainer"]
margin_left = 200.0
margin_right = 396.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
disabled = true
text = "删除物品"

[node name="GenerateFunctionPanel" parent="HBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_right = 480.0
margin_bottom = 720.0

[node name="FunctionAttributeList" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 484.0
margin_right = 880.0
margin_bottom = 720.0
size_flags_horizontal = 3
title_name = "功能属性"

[node name="AttributeEditList" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 884.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
title_name = "功能属性参数"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 641.116, 358 )
current = true
zoom = Vector2( 4, 4 )
[connection signal="pressed" from="HBoxContainer/GenerateFunctionPanel/GemerateFunctionButton" to="." method="_on_GemerateFunctionButton_pressed"]
[connection signal="on_item_selected" from="HBoxContainer/FunctionAttributeList" to="." method="_on_FunctionAttributeList_on_item_selected"]

[editable path="HBoxContainer/GenerateFunctionPanel"]
